# met-office-api-rs

./: .gitignore  API_README.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  generate.sh
.cargo/: config.toml
docs/: Feature.md  ParameterArray.md  ParameterDetails.md  Point.md  Properties.md  SpotForecastFeatureCollection.md  SpotdataThreeHourlyApiApi.md  Symbol.md  TimeSeries.md  TimeSeries1.md  Unit.md  VndError.md  spotdata_three_hourly_api_api.md
examples/: spotdata_three_hourly.rs
openapi/: three-hourly_1_0_1.yaml
openapi/modifications/: modified_configuration.rs  modified_spotdata_three_hourly_api.rs
src/apis/: mod.rs
src/models/: feature.rs  mod.rs  parameter_array.rs  parameter_details.rs  point.rs  properties.rs  spot_forecast_feature_collection.rs  symbol.rs  time_series.rs  unit.rs  vnd_error.rs
