[package]
name = "met-office-api-rs"
version = "0.1.0-alpha"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "^2.2"
uuid = { version = "^1.0", features = ["serde"] }
tokio = { version = "^1.0", features = ["full"] }
anyhow = "^1"
dotenv = "0.15.0"
async-trait = "0.1.58"

[dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart"]

[features]
spotdata = []

[[example]]
name = "spotdata_three_hourly"
required-features = ["spotdata"]
